# BachelorsDegree

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  getting_started.sh  licenta_EXECUTABLE  todo
cloud/: index.js  package.json
latex/: 0-abstract.aux  0-abstract.tex  0-cover.aux  0-cover.tex  0-title.aux  0-title.tex  1-introducere.aux  1-introducere.tex  2-preliminarii.aux  2-preliminarii.tex  3-concluzii.aux  3-deciziiArhitecturale.tex  3-design.aux  3-designSiArhitecarii.aux  3-designSiArhitecttura.aux  3-designSiArhitectura.aux  3-designSiArhitectura.tex  3-designSiArhitecura.aux  3-designSiArhitura.aux  3-ecosistemulGCP.tex  4-.aux  4-concluzii.aux  4-implementare.aux  4-implementare.tex  4-setupSiCompilare.tex  4.aux  5-concluzii.aux  5-detaliereaImplementarii.tex  6-concluzii.tex  6-requestExample.tex  7-exampleConv.tex  bibliography.bib  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  (+1 more)
res/: login_key_to_gcp_service_account.json
res/cpp/headers/: chatbot.h  constants.h  logger.h  server.h
res/cpp/src/: chatbot.cpp  constants.cpp  logger.cpp  main.cpp  server.cpp
res/css/: text.css  text.css.map
res/html/: chat.html  index.html
res/ico/: about.txt
res/js/: chat-update.js  index.js  themes.js
res/scss/: chat.scss  colors.scss  scrollbar.scss  text.scss
